<?xml version="1.0" encoding="UTF-8" ?>

<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
         xmlns="http://maven.apache.org/POM/4.0.0">


    <modelVersion>4.0.0</modelVersion>

    <name>Empty3</name>

    <groupId>one.empty3</groupId>
        <artifactId>empty3-library-3d</artifactId>
    <version>2019.1</version>
    <description>3D rendering engine. Plus modelling.</description>
    <packaging>jar</packaging>

    <distributionManagement>
        <repository>
            <id>if2</id>
            <name>empty3.one</name>
            <url>ftp://ftp.empty3.one/Downloads/maven</url>
        </repository>
    </distributionManagement>

    <build>
        <defaultGoal>install</defaultGoal>
        <directory>${basedir}/target</directory>
        <finalName>${project.artifactId}-${project.version}</finalName>
        <resources>
            <resource>
                <targetPath>${basedir}/target/classes</targetPath>
                <filtering>false</filtering>
                <directory>${basedir}/src/main/java</directory>
                <includes>
                    <include>**/*.*</include>
                </includes>
                <excludes>
                    <exclude>**/*.java</exclude>
                    <exclude>**/*.form</exclude>
                </excludes>
            </resource>
        </resources>
        <sourceDirectory>${basedir}/src/main/java</sourceDirectory>
        <outputDirectory>${basedir}/target/classes</outputDirectory>
        <testOutputDirectory>${basedir}/target/test-classes</testOutputDirectory>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.12.4</version>
                <configuration>
                    <skipTests>true</skipTests>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>info.emptycanvas.library.gui.NEWMain</mainClass>
                            <packageName>info.emptycanvas.library.gui</packageName>
                            <addClasspath>true</addClasspath>
                        </manifest>
                        <manifestEntries>
                            <mode>development</mode>
                            <url>${pom.url}</url>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <showDeprecation>true</showDeprecation>
                    <source>1.8</source>
                    <target>1.8</target>
                    <encoding>UTF-8</encoding>

                </configuration>

            </plugin>


            <plugin>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                </executions>
            </plugin>

            <plugin>
                <artifactId>maven-resources-plugin</artifactId>
                <version>2.6</version>
                <executions>
                    <execution>
                        <id>copy-resources</id>
                        <!-- here the phase you need -->
                        <phase>validate</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${basedir}/target/</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>runscripts/</directory>
                                    <filtering>true</filtering>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

        </plugins>

        <extensions>
            <!-- Enabling the use of FTP -->
            <extension>
                <groupId>org.apache.maven.wagon</groupId>
                <artifactId>wagon-ftp</artifactId>
                <version>2.12</version>
            </extension>
        </extensions>
    </build>

    <dependencies>
        <!-- https://mvnrepository.com/artifact/junit/junit -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jogamp.jogl</groupId>
            <artifactId>jogl-all-main</artifactId>
            <version>2.3.2</version>
        </dependency>

        <dependency>
            <groupId>org.jogamp.jocl</groupId>
            <artifactId>jocl-main</artifactId>
            <version>2.0.2-rc12</version>
        </dependency>
        <dependency>
            <groupId>org.jogamp.joal</groupId>
            <artifactId>joal-main</artifactId>
            <version>2.3.2</version>
        </dependency>
        <dependency>
            <groupId>org.jogamp.gluegen</groupId>
            <artifactId>gluegen-rt</artifactId>
            <version>2.3.2</version>
            <classifier>natives-windows-amd64</classifier>
        </dependency>
        <dependency>
            <artifactId>joal</artifactId>
            <groupId>org.jogamp.joal</groupId>
            <type>jar</type>
            <version>2.3.2</version>
            <classifier>natives-windows-amd64</classifier>
        </dependency>
        <dependency>
            <groupId>org.jogamp.gluegen</groupId>
            <artifactId>gluegen-rt-main</artifactId>
            <version>2.3.2</version>
        </dependency>
        <dependency>
            <groupId>be.manudahmen</groupId>
            <artifactId>montemedia</artifactId>
            <version>1.0</version>
            <type>jar</type>
        </dependency>
       <dependency>
            <groupId>org.swinglabs</groupId>
            <artifactId>swing-layout</artifactId>
            <version>1.0.3</version>
        </dependency>
        <dependency>
            <groupId>io.humble</groupId>
            <artifactId>humble-video-all</artifactId>
            <version>0.1.1</version>
        </dependency>
        <dependency>
            <groupId>io.humble</groupId>
            <artifactId>humble-video-noarch</artifactId>
            <version>0.1.1</version>
        </dependency>
        <dependency>
            <groupId>jep</groupId>
            <artifactId>jep</artifactId>
            <version>2.24</version>
        </dependency>
    <!-- https://mvnrepository.com/artifact/org.jogamp.jogl/jogl -->
    <dependency>
        <groupId>org.jogamp.jogl</groupId>
        <artifactId>jogl</artifactId>
        <version>2.3.2</version>
    </dependency>
 <dependency>
        <groupId>javax.media</groupId>
        <artifactId>jmf</artifactId>
        <version>2.1.1e</version>
    </dependency>
    <dependency>
        <groupId>javax.media</groupId>
        <artifactId>jai-core</artifactId>
        <version>1.1.3</version>
    </dependency>
    <dependency>
            <groupId>xuggle</groupId>
            <artifactId>xuggle-xuggler</artifactId>
            <version>5.4</version>
        </dependency>
        <dependency>
            <groupId>org.jogamp.jogl</groupId>
            <artifactId>jogl-all</artifactId>
            <version>2.3.2</version>
        </dependency>
        <dependency>
            <groupId>com.badlogicgames.gdx</groupId>
            <artifactId>gdx</artifactId>
            <version>1.9.10-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>com.github.sarxos</groupId>
            <artifactId>webcam-capture</artifactId>
            <version>0.3.9</version>
        </dependency>
    </dependencies>
</project>
